tests/baselines/reference/methodSignatureHandledDeclarationKindForSymbol.errors.txt
tests/cases/compiler/methodSignatureHandledDeclarationKindForSymbol.ts(2,5): error TS2300: Duplicate identifier 'bold'.
tests/cases/compiler/methodSignatureHandledDeclarationKindForSymbol.ts(6,5): error TS2300: Duplicate identifier 'bold'.


==== tests/cases/compiler/methodSignatureHandledDeclarationKindForSymbol.ts (2 errors) ====
    interface Foo {
        bold(): string;
        ~~~~
!!! error TS2300: Duplicate identifier 'bold'.
    }
    
    interface Foo {
        bold: string;
        ~~~~
!!! error TS2300: Duplicate identifier 'bold'.
    }
    
    